stages/stage2/k8s/substages/03-traefik-ingress-tls/00-traefik-rbac-and-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  namespace: kube-system
spec:
  controller: traefik.io/ingress-controller
