stages/stage2/k8s/substages/03-traefik-ingress-tls/01b-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8000
      nodePort: 30080
    - name: websecure
      port: 443
      targetPort: 8443
      nodePort: 30443
