stages/stage2/k8s/substages/03-traefik-ingress-tls/02-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: apollo-airlines-ui
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - frontend.apollo.local
      secretName: apollo-tls-secret
  rules:
    - host: frontend.apollo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
